Scene graph improvements.